--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,79 @@
     margin: 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+body {
+    background-color: #4b4b4b;
+    margin: 0 auto;
+    width: 80%;
+}
+
+h1 {
+    background-color: black;
+    color: white;
+    width: 100%;
+    font-size: 2em;
+}
+
+nav ul li {
+        display: inline;
+        font-size: 1.5em;
+}
+
+nav ul {
+    text-align: center;
+    color: white;
+    padding: 10px;
+    word-spacing: 3ch;
+}
+
+html {
+    background-color: #1a1a1a;
+}
+
+main {
+    display: flex;
+    /* height: 89vh; */
+}
+
+main ul {
+    
+}
+
+section {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    /* margin-bottom: 5px; */
+}
+
+article img {
+    /* display: block;  */
+    width: 100%;
+    height: 85%;
+
+}
+
+article {
+    background-color: #1a1a1a;
+    flex-basis: 26%;
+    color: white;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: medium;
+
+}
+
+aside {
+    background-color: white;
+    flex-basis: 10%;
+}
+
+aside ul {
+    padding: 20px;
+    list-style: none;
+}
+
+aside ul li {
+    padding: 10px 0;
+}
