--- a/styles.css
+++ b/styles.css
@@ -35,17 +35,15 @@ html {
 
 main {
     display: flex;
-    /* height: 89vh; */
+    height: 100%;
 }
 
-main ul {
-    
-}
 
 section {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    height: 100%;
     /* margin-bottom: 5px; */
 }
 
@@ -58,7 +56,7 @@ article img {
 
 article {
     background-color: #1a1a1a;
-    flex-basis: 26%;
+    /* flex-basis: 26%; */
     color: white;
     margin-bottom: 20px;
     text-align: center;
@@ -79,3 +77,4 @@ aside ul {
 aside ul li {
     padding: 10px 0;
 }
+
